--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-scripts": "0.9.5"
+    "react-router-dom": "^6.6.1",
+    "react-scripts": "0.9.5",
+    "react-select": "^5.7.0",
+    "socket.io-client": "^4.5.4",
+    "stream-chat": "^8.2.0",
+    "stream-chat-react": "^10.4.2",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {},
   "scripts": {
