--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 MONGODB_URL="mongodb+srv://bideherman:codelive22@chat-app.kp3ynbr.mongodb.net/?retryWrites=true&w=majority"
+DB_PW = "nTfJqrnzuSLplTMr"
+DB_User = "mernChat-hb"
