--- a/client/package.json
+++ b/client/package.json
@@ -3,23 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.6.1",
+    "react-redux": "^8.0.5",
+    "react-router-bootstrap": "^0.26.2",
+    "react-router-dom": "^6.0.1",
     "react-scripts": "0.9.5",
     "react-select": "^5.7.0",
+    "redux": "^4.2.0",
+    "redux-actions": "^2.6.5",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.5.4",
     "stream-chat": "^8.2.0",
     "stream-chat-react": "^10.4.2",
     "universal-cookie": "^4.0.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@redux-devtools/core": "^3.13.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "exports": {
+    "import": "./dist/redux-toolkit.esm.mjs",
+    "require": "./dist/index.js"
   }
 }
