--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
-    "@redux-devtools/core": "^3.13.1"
+    "@redux-devtools/core": "^3.13.1",
+    "css-loader": "^6.7.3",
+    "file-loader": "^6.2.0",
+    "style-loader": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
